+fix bug: navBar won't be open after switch top level state (root cause: scope copying at state switch somehow break the navbar; fix: avoid top level state switch by making one single ancestor for all states); +restaurant list page

--- a/assets/styles/client/page-signin.css
+++ b/assets/styles/client/page-signin.css
@@ -39,14 +39,3 @@
 #user material-tab-label.active {
   color: #f1f1f1;
 }
-
-/*
-#user .pane-signin {
-  font-size: 18px;
-  height: 300px;
-}
-
-#user .pane-signup {
-  font-size: 18px;
-  height: 300px;
-}*/
