--- a/assets/styles/client/page.css
+++ b/assets/styles/client/page.css
@@ -32,7 +32,6 @@
 }
 
 #layout material-sidenav {
-  width: 220px;
   min-width: 220px;
   max-width: 220px;
 }
